# nettfiske

./: .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  README.md  sample.json
src/: data.rs  errors.rs  main.rs  nettfiske.rs  util.rs  websockets.rs
