[package]
name = "nettfiske"
version = "0.3.0"
authors = ["Flavio Oliveira <flavio@wisespace.io>"]
license = "MIT OR Apache-2.0"
edition = "2018"

description = "Detect Phishing fetching Certificate Transparency Logs"
keywords = ["phishing", "security", "idna", "punycode"]
documentation = "https://github.com/wisespace-io/nettfiske"
repository = "https://github.com/wisespace-io/nettfiske"
readme = "README.md"

[dependencies]
url = "2.1"
log = "0.4"
fern = "0.6"
clap = "2.33"
chrono = "0.4"
publicsuffix = "1.5"
console = "0.10"
strsim = "0.7"
idna = "0.2"
unicode_skeleton = "0.1"
tungstenite = "0.11"
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0"
error-chain = { version = "0.12", default-features = false }
